--- a/heroes.html
+++ b/heroes.html
@@ -38,6 +38,10 @@
                     <center>Hawkeye</center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-nickfury.png">
                     <center>Nick Fury</center></div>
+           <div class="grid-item"><img src ="../mcuwiki/pics/hero-warmachine.png">
+                     <center>War Machine</center></div>
+           <div class="grid-item"><img src ="../mcuwiki/pics/hero-starlord.png">
+                     <center>Star-Lord</center></div>
      </div>
 
 </body>
