--- a/heroes.html
+++ b/heroes.html
@@ -27,9 +27,9 @@
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-ironman.png">
                     <center><b>Iron Man</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-captainamerica.png">
-                    <center>Captain America</center></div>
+                    <center><b>Captain America</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-thor.png">
-                    <center>Thor</center></div>
+                    <center><b>Thor</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-hulk.png">
                     <center>Hulk</center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-blackwidow.png">
