--- a/heroes.html
+++ b/heroes.html
@@ -42,6 +42,14 @@
                      <center>War Machine</center></div>
            <div class="grid-item"><img src ="../mcuwiki/pics/hero-starlord.png">
                      <center>Star-Lord</center></div>
+           <div class="grid-item"><img src ="../mcuwiki/pics/hero-gamora.png">
+                     <center>Gamora</center></div>
+           <div class="grid-item"><img src ="../mcuwiki/pics/hero-drax.png">
+                     <center>Drax</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-rocket.png">
+                     <center>Rocket Raccoon</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-groot.png">
+                     <center>Groot</center></div>
      </div>
 
 </body>
