--- a/ironman.html
+++ b/ironman.html
@@ -7,9 +7,9 @@
 
 <body bgcolor="black">
 
-     <img src = "logo.jpg" width="100%%" height="55%" class="right">
-     <img src = "logo.jpg" width="100%" height="55%" class="left">
-     <img src = "home.jpg" width="100%" height="55%" class="center"> 
+     <img src = "../mcuwiki/pics/logo.jpg" width="100%%" height="55%" class="right">
+     <img src = "../mcuwiki/pics/logo.jpg" width="100%" height="55%" class="left">
+     <img src = "../mcuwiki/pics/home.jpg" width="100%" height="55%" class="center"> 
      
 
      <div class="topnav">
