--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
 
 
-  <br><center> <a href="https://fontmeme.com/avengers-font/"><img src="https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png" 
+  <br><center> <img src="https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png" 
      alt="avengers-font" border="0"></a> </center>
 
 </body>
