--- a/heroes.html
+++ b/heroes.html
@@ -50,6 +50,8 @@
                      <center>Rocket Raccoon</center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-groot.png">
                      <center>Groot</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-mantis.png">
+                     <center>Mantis</center></div>
      </div>
 
 </body>
