--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
   <br><center> <img src="https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png" 
      alt="avengers-font" border="0"></a> </center>
 
+     <script type="text/javascript">
+          $(document).ready(function(){
+             $('https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png').unbind('click').click(function(){});
+          });
+       </script>
+
 </body>
 
 
