--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
             <a href="upcoming.html">Upcoming</a>
           </div>
 
-
-  <br><center> <img src="https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png" 
+  <br>
+  
+  <center> <img src="https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png" 
      alt="avengers-font" border="0"></a> </center>
 
      <script type="text/javascript">
-          $(document).ready(function(){
+          $(document).ready(function()
+          {
              $('https://fontmeme.com/permalink/190930/b0dbbf7e86cc302cd6165379227e5589.png').unbind('click').click(function(){});
           });
-       </script>
+     </script>
 
 </body>
 
