--- a/villians.html
+++ b/villians.html
@@ -17,8 +17,8 @@
             <a href="movies.html">Movies</a>
             <a href="heroes.html">Heroes</a>
             <a class="active" href="villians.html">Villians</a>
-            <a href="#stones">Infinity Stones</a>
-            <a href="#upcoming">Upcoming</a>
+            <a href="stones.html">Infinity Stones</a>
+            <a href="upcoming.html">Upcoming</a>
           </div>
 
 
