--- a/heroes.html
+++ b/heroes.html
@@ -52,6 +52,8 @@
                      <center>Groot</center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-mantis.png">
                      <center>Mantis</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-scarletwitch.png">
+                    <center>Scarlet Witch</center></div>
      </div>
 
 </body>
