--- a/heroes.html
+++ b/heroes.html
@@ -6,7 +6,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body bgcolor="black">
+<body bgcolor="black"></body>
 
      <img src = "../mcuwiki/pics/logo.jpg" width="100%%" height="55%" class="right">
      <img src = "../mcuwiki/pics/logo.jpg" width="100%" height="55%" class="left">
@@ -54,6 +54,12 @@
                      <center>Mantis</center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-scarletwitch.png">
                     <center>Scarlet Witch</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-antman.png">
+                    <center>Ant-Man</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-spiderman.png">
+                    <center>Spider-Man</center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-blackpanther.png">
+                    <center>Black Panther</center></div>
      </div>
 
 </body>
