--- a/heroes.html
+++ b/heroes.html
@@ -31,35 +31,35 @@
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-thor.png">
                     <center><b>Thor</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-hulk.png">
-                    <center>Hulk</center></div>
+                    <center><b>Hulk</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-blackwidow.png">
-                    <center>Black Widow</center></div>
+                    <center><b>Black Widow</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-hawkeye.png">
-                    <center>Hawkeye</center></div>
+                    <center><b>Hawkeye</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-nickfury.png">
-                    <center>Nick Fury</center></div>
+                    <center><b>Nick Fury</b></center></div>
            <div class="grid-item"><img src ="../mcuwiki/pics/hero-warmachine.png">
-                     <center>War Machine</center></div>
+                     <center><b>War Machine</b></center></div>
            <div class="grid-item"><img src ="../mcuwiki/pics/hero-starlord.png">
-                     <center>Star-Lord</center></div>
+                     <center><b>Star-Lord</b></center></div>
            <div class="grid-item"><img src ="../mcuwiki/pics/hero-gamora.png">
-                     <center>Gamora</center></div>
+                     <center><b>Gamora</b></center></div>
            <div class="grid-item"><img src ="../mcuwiki/pics/hero-drax.png">
-                     <center>Drax</center></div>
+                     <center><b>Drax</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-rocket.png">
-                     <center>Rocket Raccoon</center></div>
+                     <center><b>Rocket Raccoon</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-groot.png">
-                     <center>Groot</center></div>
+                     <center><b>Groot</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-mantis.png">
-                     <center>Mantis</center></div>
+                     <center><b>Mantis</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-scarletwitch.png">
-                    <center>Scarlet Witch</center></div>
+                    <center><b>Scarlet Witch</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-antman.png">
-                    <center>Ant-Man</center></div>
+                    <center><b>Ant-Man</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-spiderman.png">
-                    <center>Spider-Man</center></div>
+                    <center><b>Spider-Man</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-blackpanther.png">
-                    <center>Black Panther</center></div>
+                    <center><b>Black Panther</b></center></div>
      </div>
 
 </body>
