--- a/heroes.html
+++ b/heroes.html
@@ -60,6 +60,14 @@
                     <center><b>Spider-Man</b></center></div>
           <div class="grid-item"><img src ="../mcuwiki/pics/hero-blackpanther.png">
                     <center><b>Black Panther</b></center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-doctorstrange.png">
+                    <center><b>Doctor Strange</b></center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-valkyrie.png">
+                    <center><b>Valkyrie</b></center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-wasp.png">
+                    <center><b>Wasp</b></center></div>
+          <div class="grid-item"><img src ="../mcuwiki/pics/hero-captainmarvel.png">
+                    <center><b>Captain Marvel</b></center></div>
      </div>
 
 </body>
