--- a/villians.html
+++ b/villians.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="villians.css">
 
 <html>
 <head>
@@ -19,7 +20,11 @@
             <a class="active" href="villians.html">Villians</a>
             <a href="stones.html">Infinity Stones</a>
             <a href="upcoming.html">Upcoming</a>
-          </div>
+     </div>
+
+     <div class="grid-container">
+
+     </div>
 
 
 </body>
