--- a/villians.html
+++ b/villians.html
@@ -23,6 +23,8 @@
      </div>
 
      <div class="grid-container">
+               <div class="grid-item"><img src ="../mcuwiki/pics/villian-thanos.png">
+                    <center><b>Thanos</b></center></div>
 
      </div>
 
