--- a/villians.html
+++ b/villians.html
@@ -25,6 +25,8 @@
      <div class="grid-container">
                <div class="grid-item"><img src ="../mcuwiki/pics/villian-thanos.png">
                     <center><b>Thanos</b></center></div>
+               <div class="grid-item"><img src ="../mcuwiki/pics/villian-loki.png">
+                    <center><b>Loki</b></center></div>
 
      </div>
 
