--- a/villians.html
+++ b/villians.html
@@ -27,7 +27,7 @@
                     <center><b>Thanos</b></center></div>
                <div class="grid-item"><img src ="../mcuwiki/pics/villian-loki.png">
                     <center><b>Loki</b></center></div>
-               div class="grid-item"><img src ="../mcuwiki/pics/villian-ultron.png">
+               <div class="grid-item"><img src ="../mcuwiki/pics/villian-ultron.png">
                     <center><b>Ultron</b></center></div>
 
      </div>
